<resources>
    <string name="Theme.DoAnMH">Premier Leauge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="actionsearch">Search</string>
    // Navigation drawer
    <string name="nav_latest">Latest</string>
    <string name="nav_pl">PL</string>
    <string name="nav_Fantasy">Fantasy</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_more">More</string>
    <string name="nav_account">Account</string>
    <string name="nav_myprofile">My Profile</string>
    <string name="nav_changepassword">Change Password</string>
    <string name="nav_signout">Sign Out</string>
    //Bottom navigation
    <string name="tab_latest">Latest</string>
    <string name="tab_pl">PL</string>
    <string name="tab_fantasy">Fantasy</string>
    <string name="tab_stats">Stats</string>
    <string name="tab_more">More</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="app_name">Premier Leauge</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
</resources>